--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/NAME_SETL_ALL_ISRAEL_1.js"></script><script src="layers/MASLULIM_20102023_2.js"></script>
-        <script src="styles/NAME_SETL_ALL_ISRAEL_1_style.js"></script><script src="styles/MASLULIM_20102023_2_style.js"></script>
+        <script src="layers/NAME_SETL_ALL_ISRAEL_1.js"></script><script src="layers/22102023_2243___2.js"></script><script src="layers/MASLULIM_20102023_3.js"></script><script src="layers/MASLULIM_191023_4.js"></script>
+        <script src="styles/NAME_SETL_ALL_ISRAEL_1_style.js"></script><script src="styles/22102023_2243___2_style.js"></script><script src="styles/MASLULIM_20102023_3_style.js"></script><script src="styles/MASLULIM_191023_4_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
